force-app/main/default/objects/sked__Admin_Setting__mdt/sked__Admin_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Admin Setting</label>
    <pluralLabel>Admin Settings</pluralLabel>
</CustomObject>