force-app/main/default/objects/sked__Admin_Setting__mdt/fields/sked__Value__c.field-meta.xml
<CustomField>
    <fullName>sked__Value__c</fullName>
    <label>Value</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>