force-app/main/default/objects/sked__Admin_Setting__mdt/fields/sked__Value_New__c.field-meta.xml
<CustomField>
    <fullName>sked__Value_New__c</fullName>
    <description>Replace the old Value field which is not editable by subscribers. If the two fields have values, the new one will be used.</description>
    <label>Value (New)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>